[metadata]
name = thinking-python
version = 2014.2
summary = Thinking in Python
description-file =
    README.rst
author = zhyizhyi
author-email = zhyizhyi@gmail.com
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    thinking
